--- a/amundsen_application/static/package.json
+++ b/amundsen_application/static/package.json
@@ -132,6 +132,7 @@
     "axios": "0.19.0",
     "core-js": "^3.6.5",
     "form-serialize": "^0.7.2",
+    "fsevents": "*",
     "jquery": "^3.5.0",
     "moment-timezone": "^0.5.31",
     "react": "^16.13.1",
