--- a/requirements.txt
+++ b/requirements.txt
@@ -1,86 +1,69 @@
-# The modular source code checker: pep8, pyflakes and co
-# License: MIT
-# Upstream url: http://bitbucket.org/tarek/flake8
-flake8==3.8.4
-
-# A flake8 plugin that helps you write tidier imports.
-# License: ISCL
-# Upstream url: https://pypi.python.org/pypi/flake8-tidy-imports
-flake8-tidy-imports==1.1.0
-
-# A mature full-featured Python testing tool.
-# License: MIT
-# Upstream url: http://pytest.org/
-pytest==6.1.2
-
-# Pytest plugin for measuring coverage.
-# License: MIT
-# Upstream url: https://github.com/pytest-dev/pytest-cov
-pytest-cov==2.5.1
-
-# Rolling backport of unittest.mock for all Pythons
-# License: BSD
-# Upstream url: https://mock.readthedocs.io/en/latest/
-mock==4.0.2
-
-# Thin-wrapper around the mock package for easier use with py.test.
-# License: MIT
-# Upstream url: https://pypi.python.org/pypi/pytest-mock
-pytest-mock==1.1
-
-# Mypy is an optional static type checker for Python.
-# License: MIT
-# Upstream url: https://github.com/python/mypy
-mypy==0.660
-
-# PEP 484
-# License: PSF
-# Upstream url: https://github.com/python/typing
-typing==3.6.4
-
-# A lightweight WSGI web application framework
-# License: BSD
-# Upstream url: https://github.com/pallets/flask
-flask==1.0.2
-
-# The wheel project provides a bdist_wheel command for setuptools >= 0.8.0
-# License: MIT
-# Upstream url: https://github.com/pypa/wheel
-wheel==0.33.1
-
-# HTTP for Humans
-# License: Apache
-# Upstream url: http://docs.python-requests.org/en/master/
-requests==2.24.0
-
-# A lightweight library for converting complex datatypes to and from native Python datatypes.
-# License: MIT
-# Upstream url: https://github.com/marshmallow-code/marshmallow
-marshmallow>=2.15.3,<3.0
-
-# Allows declaring marshmallow schema through type annotations
-# License: MIT
-# Upstream url: https://github.com/justanr/marshmallow-annotations
-marshmallow-annotations>=2.4.0,<3.0
-
-# A utility library for mocking out the requests Python library.
-# License: Apache 2.0
-# Upstream url: https://pypi.org/project/responses/
-responses==0.12.0
-
-# A common package that holds the models deifnition and schemas that are used
-# accross different amundsen repositories.
 amundsen-common==0.5.7
-
-# Library for rest endpoints with Flask
-# Upstream url: https://github.com/flask-restful/flask-restful
-flask-restful==0.3.8
-
-# SDK for JIRA
-jira==2.0.0
-
-# SDK for Asana
+amundsen-frontend==3.0.0
+aniso8601==8.0.0
 asana==0.10.3
-
-# Retrying library
-retrying>=1.3.3,<2.0
+attrs==20.3.0
+cachelib==0.1.1
+certifi==2020.11.8
+cffi==1.14.3
+chardet==3.0.4
+click==7.1.2
+coverage==5.3
+cryptography==3.2.1
+defusedxml==0.6.0
+flake8==3.8.4
+flake8-tidy-imports==1.1.0
+Flask==1.0.2
+flask-oidc==1.4.0
+Flask-RESTful==0.3.8
+Flask-Session==0.3.2
+Flask-SQLAlchemy==2.4.4
+flaskoidc==0.1.1
+httplib2==0.18.1
+idna==2.10
+importlib-metadata==2.0.0
+inbotauth==0.0.11
+iniconfig==1.1.1
+itsdangerous==1.1.0
+Jinja2==2.11.2
+jira==2.0.0
+MarkupSafe==1.1.1
+marshmallow==2.21.0
+marshmallow-annotations==2.4.0
+mccabe==0.6.1
+mock==4.0.2
+msal==1.8.0
+mypy==0.660
+mypy-extensions==0.4.3
+neo4j==4.2.1
+oauth2client==4.1.3
+oauthlib==3.1.0
+packaging==20.4
+pbr==5.5.1
+pluggy==0.13.1
+py==1.9.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.6.0
+pycparser==2.20
+pyflakes==2.2.0
+PyJWT==1.7.1
+pyparsing==2.4.7
+pytest==6.1.2
+pytest-cov==2.5.1
+pytest-mock==1.1
+pytz==2020.4
+requests==2.24.0
+requests-oauthlib==1.3.0
+requests-toolbelt==0.9.1
+responses==0.12.0
+retrying==1.3.3
+rsa==4.7
+six==1.15.0
+SQLAlchemy==1.3.22
+toml==0.10.2
+typed-ast==1.2.0
+typing==3.6.4
+urllib3==1.25.11
+Werkzeug==1.0.1
+zipp==3.4.0
