--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,12 @@ aniso8601==8.0.0
 asana==0.10.3
 attrs==20.3.0
 cachelib==0.1.1
-certifi==2020.11.8
-cffi==1.14.3
+certifi==2020.12.5
+cffi==1.14.4
 chardet==3.0.4
 click==7.1.2
 coverage==5.3
-cryptography==3.2.1
+cryptography==3.3.1
 defusedxml==0.6.0
 flake8==3.8.4
 flake8-tidy-imports==1.1.0
@@ -48,6 +48,7 @@ pycodestyle==2.6.0
 pycparser==2.20
 pyflakes==2.2.0
 PyJWT==1.7.1
+PyMySQL==1.0.2
 pyparsing==2.4.7
 pytest==6.1.2
 pytest-cov==2.5.1
