ignore tests in build for now

--- a/amundsen_application/static/tsconfig.json
+++ b/amundsen_application/static/tsconfig.json
@@ -24,6 +24,6 @@
       "stories/*": ["stories/*"]
     }
   },
-  "exclude": ["node_modules", "**/__tests__"],
+  "exclude": ["node_modules", "**/__tests__", "**/*.spec.*"],
   "include": ["*.ts", "*.js", ".eslintrc.js", "js/"]
 }
